--- a/.env.example
+++ b/.env.example
@@ -1,104 +1,102 @@
 # ============================================
 # Event Platform Environment Variables
 # ============================================
-# Copy this file to .env and fill in values
+# INSTRUCTIONS: Copy this file to .env and adjust values for your environment.
 
 # ============================================
-# DATABASE
+# 1. DATABASE (PostgreSQL)
 # ============================================
+# Connection URL: postgresql://[user]:[password]@[host]:[port]/[database]?schema=public
+# - Development (Docker): host=localhost, port=5432
+# - Production (Docker Network): host=postgres, port=5432
 DATABASE_URL="postgresql://postgres:password@localhost:5432/events_platform?schema=public"
 
+# Database credentials (used by Docker Compose to initialize DB)
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=events_platform
+
 # ============================================
-# REDIS (Sessions, Rate Limiting, Caching)
+# 2. CACHE & QUEUE (Redis)
 # ============================================
+# Connection URL: redis://:[password]@[host]:[port]
+# - Development: localhost
+# - Production: redis
 REDIS_URL="redis://localhost:6379"
 
 # ============================================
-# MINIO / S3 (File Storage)
+# 3. FILE STORAGE (MinIO / S3)
 # ============================================
+# Endpoint should include protocol (http/https). 
+# - Development: http://localhost:9000
+# - Production (Internal): http://minio:9000
 MINIO_ENDPOINT="http://localhost:9000"
-MINIO_ACCESS_KEY="minioadmin"
-MINIO_SECRET_KEY="minioadmin"
-# Bucket names (created automatically by docker-compose minio-init)
-# MINIO_UPLOADS_BUCKET="uploads"
-# MINIO_PUBLIC_ASSETS_BUCKET="public-assets"
+MINIO_PORT=9000
+MINIO_USE_SSL=false
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
+
+# Bucket Names (Created automatically by init script in dev)
+MINIO_BUCKET_NAME="uploads"
+# Public assets bucket (optional if using direct serving)
+MINIO_PUBLIC_BUCKET="public-assets"
+
+# Credentials for API to access MinIO
+# In dev, matches ROOT_USER/PASSWORD. In prod, use standard AWS_ACCESS_KEY_ID style if using real S3.
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
 
 # ============================================
-# AUTHENTICATION & SECURITY
+# 4. API SERVER CONFIGURATION
 # ============================================
-# JWT secret for ticket tokens (QR codes)
-JWT_SECRET="your-super-secure-jwt-secret-change-in-production"
-
-# Session secret for express-session
-SESSION_SECRET="your-super-secure-session-secret-change-in-production"
-
-# Cookie domain (for cross-subdomain sessions)
-# Leave empty for localhost development
-COOKIE_DOMAIN=
-
-# ============================================
-# API SERVER
-# ============================================
-# Port the NestJS API runs on
+NODE_ENV=development
 PORT=3001
 
-# Environment mode
-NODE_ENV=development
+# Security Secrets (Generate using `openssl rand -hex 32`)
+JWT_SECRET="changeme-in-production-secure-jwt-secret-key-123"
+SESSION_SECRET="changeme-in-production-secure-session-secret-key-456"
+
+# CORS & Cookies
+CORS_ORIGIN="http://localhost:3000"
+COOKIE_DOMAIN="" # Leave empty for localhost, set to .yourdomain.com for prod
+APP_BASE_URL="http://localhost:3000"
 
 # ============================================
-# FRONTEND (Next.js)
+# 5. FRONTEND CONFIGURATION (Next.js)
 # ============================================
-# API URL the frontend calls
+# Direct Public API URL (Browser -> API)
 NEXT_PUBLIC_API_URL="http://localhost:3001/api/v1"
 
-# Public asset host (Microsite images, etc.)
-NEXT_PUBLIC_ASSET_HOST="https://public-assets.mathmaroc.org"
-# Optional direct asset host override used when NEXT_PUBLIC_ASSET_HOST is empty.
-# Example (single-host nginx): http://localhost/uploads
+# Root Domain for Subdomain Routing (e.g., "mathmaroc.org")
+NEXT_PUBLIC_ROOT_DOMAIN="localhost"
+
+# Routing Mode ("path" | "subdomain")
+# - path: http://localhost:3000/events/my-event
+# - subdomain: http://my-event.localhost:3000
+NEXT_PUBLIC_ROUTING_MODE="path"
+
+# Asset Configuration
+# Where browsers should fetch images from. if empty, proxies through Next.js/API.
+# NEXT_PUBLIC_ASSET_HOST="https://assets.mathmaroc.org"
+NEXT_PUBLIC_ASSET_HOST=""
 NEXT_PUBLIC_DIRECT_ASSET_HOST=""
 
-# Root domain for host-based routing
-NEXT_PUBLIC_ROOT_DOMAIN="mathmaroc.org"
-
-# Routing mode: "path" or "subdomain"
-# - path: Events at /events/:slug (easier for local dev)
-# - subdomain: Events at :slug.mathmaroc.org (production)
-NEXT_PUBLIC_ROUTING_MODE=path
-
 # ============================================
-# EMAIL (Optional - uses MailHog in dev)
+# 6. MAIL (SMTP)
 # ============================================
-SMTP_HOST=localhost
+# Development: MailHog (localhost:1025)
+# Production: AWS SES, SendGrid, etc.
+SMTP_HOST="localhost"
 SMTP_PORT=1025
-SMTP_USER=
-SMTP_PASS=
-SMTP_FROM="noreply@mathmaroc.org"
+SMTP_USER=""
+SMTP_PASS=""
+SMTP_FROM="noreply@event-platform.com"
 
 # ============================================
-# OPTIONAL PERFORMANCE TUNING
+# 7. PERFORMANCE & TUNING (Optional)
 # ============================================
-# Enable legacy O(N) session scan fallback only when needed for migration cleanup.
 SESSION_REVOKE_SCAN_FALLBACK=false
 SESSION_REVOKE_SCAN_MAX_KEYS=5000
-
-# Async audit queue controls (request-path protection)
 AUDIT_QUEUE_MAX_SIZE=2000
 AUDIT_MAX_RETRIES=2
 AUDIT_EVENT_LOOKUP_CACHE_TTL_MS=120000
-
-# ============================================
-# PRODUCTION ONLY
-# ============================================
-# CORS origins (comma-separated)
-# CORS_ORIGINS="https://mathmaroc.org,https://www.mathmaroc.org"
-
-# Force HTTPS cookies
-# NODE_ENV=production
-
-# ============================================
-# DOCKER COMPOSE DEFAULTS (for reference)
-# ============================================
-# PostgreSQL: postgres:password@localhost:5432/events_platform
-# Redis: redis://localhost:6379
-# MinIO: http://localhost:9000 (console: http://localhost:9001)
-# MailHog: smtp://localhost:1025 (UI: http://localhost:8025)
