add docker network

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,8 @@
 # ============================================
 # Connection URL: postgresql://[user]:[password]@[host]:[port]/[database]?schema=public
 # - Development (Docker): host=localhost, port=5432
-# - Production (Docker Network): host=postgres, port=5432
+# - Production (Docker Network): host=postgres (Service Name), port=5432. 
+#   NOTE: We use the service name 'postgres' which resolves within the 'event_platform_net' network.
 DATABASE_URL="postgresql://postgres:password@localhost:5432/events_platform?schema=public"
 
 # Database credentials (used by Docker Compose to initialize DB)
@@ -21,7 +22,7 @@ POSTGRES_DB=events_platform
 # ============================================
 # Connection URL: redis://:[password]@[host]:[port]
 # - Development: localhost
-# - Production: redis
+# - Production: redis (Service Name)
 REDIS_URL="redis://localhost:6379"
 
 # ============================================
@@ -29,7 +30,7 @@ REDIS_URL="redis://localhost:6379"
 # ============================================
 # Endpoint should include protocol (http/https). 
 # - Development: http://localhost:9000
-# - Production (Internal): http://minio:9000
+# - Production (Internal): http://minio:9000 (Service Name)
 MINIO_ENDPOINT="http://localhost:9000"
 MINIO_PORT=9000
 MINIO_USE_SSL=false
