--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   postgres:
     image: postgres:15-alpine
+    container_name: event_platform_postgres
     restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
@@ -11,16 +12,18 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
-      - internal
+      - event_platform_net
 
   redis:
     image: redis:7-alpine
+    container_name: event_platform_redis
     restart: always
     networks:
-      - internal
+      - event_platform_net
 
   minio:
     image: minio/minio
+    container_name: event_platform_minio
     restart: always
     command: server /data --console-address ":9001"
     environment:
@@ -29,12 +32,13 @@ services:
     volumes:
       - minio_data:/data
     networks:
-      - internal
+      - event_platform_net
 
   api:
     build:
       context: .
       dockerfile: apps/api/Dockerfile
+    container_name: event_platform_api
     restart: always
     depends_on:
       - postgres
@@ -45,6 +49,7 @@ services:
       PORT: 3000
       
       # Database & Redis
+      # Note: We use the service names 'postgres' and 'redis' as hostnames within the Docker network
       DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/${POSTGRES_DB:-event_platform}
       REDIS_URL: redis://redis:6379
       
@@ -80,15 +85,18 @@ services:
       AUDIT_EVENT_LOOKUP_CACHE_TTL_MS: ${AUDIT_EVENT_LOOKUP_CACHE_TTL_MS:-120000}
 
     networks:
-      - internal
+      - event_platform_net
 
   web:
     build:
       context: .
       dockerfile: apps/web/Dockerfile
+    container_name: event_platform_web
     restart: always
     depends_on:
       - api
+    ports:
+      - "127.0.0.1:3310:3000"
     environment:
       NODE_ENV: production
       PORT: 3000
@@ -107,28 +115,10 @@ services:
       SESSION_VALIDATION_MAX_AGE_SECONDS: ${SESSION_VALIDATION_MAX_AGE_SECONDS:-900}
       
     networks:
-      - internal
-
-  nginx:
-    image: nginx:alpine
-    restart: always
-    ports:
-      - "80:80"
-      # Expose MinIO Console if needed (optional, for debugging)
-      # - "9001:9001" 
-    volumes:
-      - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - api
-      - web
-    networks:
-      - internal
-      - public
+      - event_platform_net
 
 networks:
-  internal:
-    driver: bridge
-  public:
+  event_platform_net:
     driver: bridge
 
 volumes:
