--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,8 @@ POSTGRES_DB=events_platform
 # Connection URL: redis://:[password]@[host]:[port]
 # - Development: localhost
 # - Production: redis (Service Name)
-REDIS_URL="redis://localhost:6379"
+REDIS_PASSWORD="changeme_redis_password"
+REDIS_URL="redis://:${REDIS_PASSWORD}@localhost:6379"
 
 # ============================================
 # 3. FILE STORAGE (MinIO / S3)
