--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -18,6 +18,7 @@ services:
     image: redis:7-alpine
     container_name: event_platform_redis
     restart: always
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     networks:
       - event_platform_net
 
@@ -51,7 +52,7 @@ services:
       # Database & Redis
       # Note: We use the service names 'postgres' and 'redis' as hostnames within the Docker network
       DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/${POSTGRES_DB:-event_platform}
-      REDIS_URL: redis://redis:6379
+      REDIS_URL: redis://:${REDIS_PASSWORD}@redis:6379
       
       # Security
       JWT_SECRET: ${JWT_SECRET}
