--- a/.env.example
+++ b/.env.example
@@ -51,26 +51,28 @@ MINIO_SECRET_KEY=minioadmin
 # ============================================
 # 4. API SERVER CONFIGURATION
 # ============================================
-NODE_ENV=development
-PORT=3001
+NODE_ENV=production
+# Internal port (default 3000 used by Dockerfile)
+PORT=3000
 
 # Security Secrets (Generate using `openssl rand -hex 32`)
 JWT_SECRET="changeme-in-production-secure-jwt-secret-key-123"
 SESSION_SECRET="changeme-in-production-secure-session-secret-key-456"
 
-# CORS & Cookies
-CORS_ORIGIN="http://localhost:3000"
-COOKIE_DOMAIN="" # Leave empty for localhost, set to .yourdomain.com for prod
-APP_BASE_URL="http://localhost:3000"
+# CORS & Cookies (Set to your actual domain)
+CORS_ORIGIN="https://apply.mathmaroc.org"
+COOKIE_DOMAIN=".mathmaroc.org"
+APP_BASE_URL="https://apply.mathmaroc.org"
 
 # ============================================
 # 5. FRONTEND CONFIGURATION (Next.js)
 # ============================================
 # Direct Public API URL (Browser -> API)
-NEXT_PUBLIC_API_URL="http://localhost:3001/api/v1"
+# Use a relative path if managing everything via Nginx/Next.js rewrites on the same domain
+NEXT_PUBLIC_API_URL="/api/v1"
 
 # Root Domain for Subdomain Routing (e.g., "mathmaroc.org")
-NEXT_PUBLIC_ROOT_DOMAIN="localhost"
+NEXT_PUBLIC_ROOT_DOMAIN="apply.mathmaroc.org"
 
 # Routing Mode ("path" | "subdomain")
 # - path: http://localhost:3000/events/my-event
@@ -86,13 +88,12 @@ NEXT_PUBLIC_DIRECT_ASSET_HOST=""
 # ============================================
 # 6. MAIL (SMTP)
 # ============================================
-# Development: MailHog (localhost:1025)
 # Production: AWS SES, SendGrid, etc.
-SMTP_HOST="localhost"
-SMTP_PORT=1025
-SMTP_USER=""
-SMTP_PASS=""
-SMTP_FROM="noreply@event-platform.com"
+SMTP_HOST="smtp.sendgrid.net"
+SMTP_PORT=587
+SMTP_USER="apikey"
+SMTP_PASS="your-sendgrid-api-key"
+SMTP_FROM="noreply@mathmaroc.org"
 
 # ============================================
 # 7. PERFORMANCE & TUNING (Optional)
