--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -18,7 +18,7 @@ RUN npm ci
 # Rebuild the source code only when needed
 FROM base AS builder
 WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
+COPY --from=deps /app/ ./
 COPY . .
 
 # Generate Prisma Client (if web uses it directly, otherwise might skip)
