--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -45,6 +45,7 @@ RUN adduser --system --uid 1001 nestjs
 
 COPY --from=builder /app/apps/api/dist ./apps/api/dist
 COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/apps/api/node_modules ./apps/api/node_modules
 COPY --from=builder /app/apps/api/package.json ./apps/api/package.json
 COPY --from=builder /app/packages/db ./packages/db
 COPY --from=builder /app/packages/shared ./packages/shared
