--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,6 +23,7 @@
     "@aws-sdk/client-s3": "^3.983.0",
     "@aws-sdk/s3-request-presigner": "^3.983.0",
     "@event-platform/db": "^0.0.1",
+    "@event-platform/schemas": "^0.0.1",
     "@event-platform/shared": "^0.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.3",
@@ -33,6 +34,7 @@
     "@prisma/client": "^5.22.0",
     "argon2": "^0.44.0",
     "connect-redis": "^7.1.1",
+    "express": "^5.2.1",
     "express-session": "^1.19.0",
     "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.3",
@@ -40,7 +42,8 @@
     "nodemailer": "^8.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
