--- a/.env.example
+++ b/.env.example
@@ -103,3 +103,4 @@ SESSION_REVOKE_SCAN_MAX_KEYS=5000
 AUDIT_QUEUE_MAX_SIZE=2000
 AUDIT_MAX_RETRIES=2
 AUDIT_EVENT_LOOKUP_CACHE_TTL_MS=120000
+COMPOSE_BAKE=true
