--- a/.env.example
+++ b/.env.example
@@ -91,6 +91,8 @@ NEXT_PUBLIC_DIRECT_ASSET_HOST=""
 # Production: AWS SES, SendGrid, etc.
 SMTP_HOST="smtp.sendgrid.net"
 SMTP_PORT=587
+# Optional override. If unset, app uses SMTP_PORT===465 as secure=true.
+SMTP_SECURE=false
 SMTP_USER="apikey"
 SMTP_PASS="your-sendgrid-api-key"
 SMTP_FROM="noreply@mathmaroc.org"
