--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -76,6 +76,7 @@ services:
       # Mail (SMTP)
       SMTP_HOST: ${SMTP_HOST}
       SMTP_PORT: ${SMTP_PORT:-587}
+      SMTP_SECURE: ${SMTP_SECURE:-}
       SMTP_USER: ${SMTP_USER}
       SMTP_PASS: ${SMTP_PASS}
       SMTP_FROM: ${SMTP_FROM:-noreply@event-platform.com}
