--- a/infra/docker/docker-compose.prod.yml
+++ b/infra/docker/docker-compose.prod.yml
@@ -76,6 +76,13 @@ services:
       SESSION_SECRET: ${SESSION_SECRET:-changeme_in_prod}
       COOKIE_DOMAIN: ${COOKIE_DOMAIN:-localhost}
       CORS_ORIGINS: ${CORS_ORIGINS:-http://localhost}
+      APP_BASE_URL: ${APP_BASE_URL:-http://localhost}
+      SMTP_HOST: ${SMTP_HOST}
+      SMTP_PORT: ${SMTP_PORT:-587}
+      SMTP_SECURE: ${SMTP_SECURE:-}
+      SMTP_USER: ${SMTP_USER}
+      SMTP_PASS: ${SMTP_PASS}
+      SMTP_FROM: ${SMTP_FROM:-noreply@event-platform.com}
       PORT: 3001
 
   web:
