--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -31,6 +31,17 @@ RUN cd packages/schemas && npm run build
 
 ENV NEXT_TELEMETRY_DISABLED 1
 
+ARG NEXT_PUBLIC_API_URL
+ARG NEXT_PUBLIC_ASSET_HOST
+ARG NEXT_PUBLIC_DIRECT_ASSET_HOST
+ARG NEXT_PUBLIC_ROOT_DOMAIN
+ARG NEXT_PUBLIC_ROUTING_MODE
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+ENV NEXT_PUBLIC_ASSET_HOST=${NEXT_PUBLIC_ASSET_HOST}
+ENV NEXT_PUBLIC_DIRECT_ASSET_HOST=${NEXT_PUBLIC_DIRECT_ASSET_HOST}
+ENV NEXT_PUBLIC_ROOT_DOMAIN=${NEXT_PUBLIC_ROOT_DOMAIN}
+ENV NEXT_PUBLIC_ROUTING_MODE=${NEXT_PUBLIC_ROUTING_MODE}
+
 # Build Web
 RUN cd apps/web && npm run build
 
