--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,9 @@ REDIS_URL="redis://:${REDIS_PASSWORD}@localhost:6379"
 # - Development: http://localhost:9000
 # - Production (Internal): http://minio:9000 (Service Name)
 MINIO_ENDPOINT="http://localhost:9000"
+# Optional browser-facing endpoint used for presigned URLs.
+# Set to your public origin when MINIO_ENDPOINT is internal (example: https://apply.mathmaroc.org).
+STORAGE_PUBLIC_ENDPOINT=""
 MINIO_PORT=9000
 MINIO_USE_SSL=false
 MINIO_ROOT_USER=minioadmin
