--- a/infra/docker/nginx/nginx.conf
+++ b/infra/docker/nginx/nginx.conf
@@ -49,7 +49,7 @@ http {
         # Public object storage path for microsite assets.
         location /uploads/ {
             proxy_pass http://app_assets/uploads/;
-            proxy_set_header Host minio;
+            proxy_set_header Host $host;
             add_header Cache-Control "public, max-age=3600, stale-while-revalidate=86400" always;
         }
 
