feat(app): implement application configuration and environment validation feat(email): skip SMTP verification in test mode feat(microsites): enhance user session handling and request types feat(microsites): improve settings update logic with validation test(e2e): add comprehensive end-to-end tests for domain access and microsites test(e2e): implement route smoke tests for API coverage test(e2e): establish security protection tests for event modifications test: configure Jest for testing in web application

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest --config jest.config.cjs --runInBand"
   },
   "dependencies": {
     "@event-platform/schemas": "*",
