feat(eslint): disable unsafe TypeScript rules in ESLint configuration
feat(package): add lint:fix script and modify test script in package.json

refactor(audit/page): remove unused ScrollArea import in audit page

refactor(profile/page): remove unused imports in profile page

refactor(application/page): optimize application detail loading with useCallback

refactor(applications/page): optimize application list loading with useCallback

refactor(messages/page): refactor message fetching and normalization logic

refactor(layout): remove unused Script import in layout

refactor(platform-settings-provider): simplify state initialization in platform settings provider

chore(root): update test and lint scripts to include --if-present flag

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "dev": "npm run dev --workspaces",
     "build": "npm run build --workspaces",
-    "test": "npm run test --workspaces",
-    "lint": "npm run lint --workspaces",
+    "test": "npm run test --workspaces --if-present",
+    "lint": "npm run lint --workspaces --if-present",
     "devtools": "react-devtools"
   },
   "devDependencies": {
