--- a/.env.example
+++ b/.env.example
@@ -108,4 +108,11 @@ SESSION_REVOKE_SCAN_MAX_KEYS=5000
 AUDIT_QUEUE_MAX_SIZE=2000
 AUDIT_MAX_RETRIES=2
 AUDIT_EVENT_LOOKUP_CACHE_TTL_MS=120000
+THROTTLE_TTL_MS=60000
+THROTTLE_LIMIT=300
+EVENTS_PUBLIC_CACHE_TTL_MS=30000
+EVENTS_PUBLIC_CACHE_MAX_ENTRIES=500
+MICROSITES_PUBLIC_CACHE_TTL_MS=30000
+MICROSITES_PUBLIC_CACHE_MAX_ENTRIES=2000
+PUBLIC_CONTENT_REVALIDATE_SECONDS=60
 COMPOSE_BAKE=true
