--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "react-pdf": "^10.4.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.2.1",
     "tw-animate-css": "^1.4.0",
